# tend

./: Cargo.toml  EXAMPLES.md  LICENSE-MIT  README.md  snapcraft.yaml
.debug/: README.md  test-bat-output.txt  test.bat
.github/workflows/: install.yml  pr.yml  publish-to-snapcraft.yml  publish-to-winget.yml  release.yml
src/: args.rs  colors.rs  install_service.rs  job.rs  main.rs  notify_service.rs  ping_service.rs  run.rs  service.rs  uninstall_service.rs
src/job/: event.rs  filter.rs  io.rs  log.rs  mod.rs  run.rs  template.rs
src/tui/: app.rs  mod.rs  ui.rs
