[package]
authors = ["Ľubomír Kurčák <lubomirkurcak@gmail.com>"]
name = "tend"
description = "Quickly spin up/down groups of command-line tasks with automated recovery"
version = "0.2.14"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lubomirkurcak/tend"
categories = [
    "command-line-interface",
    "command-line-utilities",
    "development-tools",
]

keywords = ["cli", "task", "automation", "recovery", "tend"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.36", features = ["derive"] }
colored = "3.0.0"
dirs-next = "2.0.0"
folktime = "0.2.1"
prettytable-rs = "0.10.0"
process-wrap = { version = "8.2.0", features = ["tokio1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.42.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "io-util",
    "signal",
    "process",
    "sync",
] }

[profile.release]
debug = false
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
