[package]
name = "tend"
version = "0.2.17"
authors = ["Ľubomír Kurčák <lubomirkurcak@gmail.com>"]
description = "Command-line tool for managing and running multiple processes"
edition = "2024"
rust-version = "1.90"
license = "Unlicense OR MIT"
repository = "https://github.com/lkurcak/tend"
categories = [
    "command-line-interface",
    "command-line-utilities",
    "development-tools",
]
keywords = ["cli", "task", "automation", "recovery", "tend"]
exclude = [
  "/.github/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
dirs-next = "2.0.0"
folktime = "0.2.1"
prettytable-rs = "0.10.0"
process-wrap = { version = "9.0.0", features = ["tokio1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "io-util",
    "signal",
    "process",
    "sync",
] }

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
