[package]
name = "tend"
version = "1.0.1"
authors = ["Ľubomír Kurčák <lubomirkurcak@gmail.com>"]
description = "Save, run, and automatically restart command-line jobs"
edition = "2024"
rust-version = "1.90"
license = "Unlicense OR MIT"
repository = "https://github.com/lkurcak/tend"
categories = [
    "command-line-utilities",
    "development-tools",
]
keywords = ["cli", "process", "supervisor", "automation", "restart"]
exclude = [
    "/.github/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
dirs-next = "2.0.0"
folktime = "0.5.0"
tabled = "0.20"
process-wrap = { version = "9.1.0", features = ["tokio1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "io-util",
    "signal",
    "process",
    "sync",
] }

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
